--- a/tools/android/KSPConfig/AndroidManifest.xml
+++ b/tools/android/KSPConfig/AndroidManifest.xml
@@ -3,16 +3,16 @@
           package="pwr.ksp"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="8"/>
-    <application android:label="@string/app_name">
-        <activity android:name="KSPConfig"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-    </application>
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"></uses-permission>
+	<uses-sdk android:minSdkVersion="10" android:maxSdkVersion="15" android:targetSdkVersion="10"/>
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+	<application android:label="@string/app_name">
+		<activity android:name="KSPConfig"
+		          android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
+	</application>
 </manifest>
